--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=ffd0852ec2ed65ab156d
+github.client.secret=63ae6f9087da6b3d1432b70b797a4981a6086c5b
+github.redirect.uri=http://localhost:8887/callback
