添加问题列表,热部署

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.datasource.url=jdbc:h2:~/community
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
+#¿ªÆôÍÕ·åÓ³Éä£¨x_xxx×ªxXXX)
+mybatis.configuration.map-underscore-to-camel-case=true
 
 spring.flyway.clean-disabled=true
